# robits

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: install-and-run-ruff.yml  install-and-run-tests.yml  publish-to-test-pypi.yml
docs/: generate_api_docs.sh
docs/source/: acknowledgement.rst  agents.rst  changelog_wrapper.rst  conf.py  configuration.rst  data_collection.rst  examples.rst  faq.rst  index.rst  installation.rst  license_wrapper.rst  peract_2.rst  quickstart_wrapper.rst  sam2act.rst  system_setup.rst  todo.rst
docs/source/api/: robits.agents.rst  robits.app.rst  robits.audio.rst  robits.cli.agents.rst  robits.cli.commands.rst  robits.cli.devices.rst  robits.cli.rst  robits.core.abc.rst  robits.core.data_model.rst  robits.core.rst  robits.dataset.io.rst  robits.dataset.rst  robits.real.franka.rst  robits.real.rst  robits.real.ur.rst  robits.real.xarm.rst  robits.remote.client.rst  robits.remote.rst  robits.remote.server.rst  robits.rst  robits.sim.rst  robits.tools.rst  robits.utils.rst  robits.vis.rst  robits.vlm.rst
examples/: bimanual_handover.py  bimanual_reach.py  move_figure_eight.py  pick_up_block.py  simple_data_collection.py  stack_blocks.py  stack_blocks_static.py
robits/app/: extrinsics_app.py
robits/cli/: cli_options.py  cli_utils.py
robits/cli/commands/: move_cli.py  service_cli.py
robits/cli/devices/: camera_cli.py  panda_cli.py  robot_cli.py
robits/core/: factory.py  utils.py
robits/core/abc/: control.py  gripper.py
robits/dataset/io/: recorder.py  stats_writer.py
robits/real/: realsense_camera.py  robotiq_gripper.py  webcam_camera.py
robits/real/franka/: franka_web_client.py  gripper.py
robits/real/ur/: control.py  robot.py
robits/real/xarm/: control.py  gripper.py  robot.py
robits/remote/client/: camera.py  client_base.py  robot.py
robits/remote/server/: server_base.py
robits/sim/: blueprints.py  camera.py  control.py  env.py  env_client.py  env_design.py  gripper.py  mjcf_utils.py  model_factory.py  robot.py
robits/sim/converters/: gripper_heuristics.py  mujoco_exporter.py  mujoco_importer.py  robot_heuristics.py
robits/sim/scene/: mjcf_utils.py  model_factory.py
robits/utils/: vision_utils.py
robits/vis/: scene_visualizer.py
robits/vlm/: openai_vlm.py  vlm_cli.py
robits_config/additional_config/sim/: gripper_ability_hand_sim.json  gripper_xarm_sim.json  robot_gen3_sim.json  robot_ur10e_ability_sim.json
robits_config/camera/: camera_webcam.json
robits_config/gripper/: gripper_panda_sim.json  gripper_robotiq_sim.json
robits_config/robot/: robot_panda_sim.json
scripts/: 20_install_rt_patch.sh  30_install_nvidia_dkms.sh  50_configure_zsh.sh  60_install_conda.sh  60_install_libfranka_0.8.0.sh  65_install_franky.sh  70_configure_intel_realsense.sh  70_install_azure_drivers.sh
scripts/conda/: 60_install_franky_0.8.0.sh
src/robits/agents/: base_agent.py  mello_agent.py
src/robits/audio/: audio.py  pocket_tts.py  speech.py
src/robits/cli/agents/: mello_cli.py
src/robits/core/: config_manager.py  factory.py  utils.py
src/robits/core/abc/: control.py
src/robits/dataset/: robot.py
src/robits/real/: robotiq_gripper.py  webcam_camera.py
src/robits/sim/: control.py  env_design.py  gripper.py
src/robits/tools/: visualize_dataset.py
src/robits/utils/: camera_intrinsics.py  service_launcher.py  transform_utils.py
src/robits_config/robot/: robot_ur10e_sim.json
src/robits_config/speech/: speech_pocket_tts.json
tests/audio/: test_cache_utils.py
tests/core/: test_action.py  test_config_manager.py  test_dataset.py  test_robot.py  test_utils.py
tests/utils/: test_intrinsics.py  test_transform.py
(+10 files in other folders)
