[project]
name = "robits"
version = "0.5.1"
description = "Lightweight, modular, and scalable software stack for AI-driven robotic manipulation."
authors = [
  { name = "Markus Grotz", email = "grotz@uw.edu" }
]
packages = [{include = "robits"}, {include = "robits_config"}]
readme = "README.md"
keywords = ["robotics", "AI", "manipulation", "research", "perception", "control", "simulation"]
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: Robot Framework",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Environment :: Console",
]

dependencies = [
    # core
    "numpy>=1.24",
    "matplotlib>=3.7.5,<4.0.0",
    "scipy>=1.13,<2.0.0",
    "ipython>=8.0",
    "rich-click>=1",
    "click-prompt>=0.6.0",
    "textual>=1.0.0,<2.0.0",
    "textual-slider>=0.1.2,<0.2.0",

    "open3d==0.18.*; python_version < '3.10'",
    "open3d>=0.18; python_version >= '3.10'",

    # optional sim
    "mujoco>=3.3,<4.0; extra == 'sim'",
    "robot-descriptions>=1.14.0,<2.0; extra == 'sim'",
    "dm-control>=1.0.30,<2.0; extra == 'sim'",

    # optional real
    # pyrealsense2 use beta  version for Python 3.12 and above.
    "pyrealsense2>=2.55.1,<3.0; python_version < '3.12' and platform_machine == 'x86_64' and extra == 'real'",
    "pyrealsense2-beta==2.56.0.8430; python_version >= '3.12' and platform_machine == 'x86_64' and extra == 'real'",
    "pyrobotiqgripper>=1.0.1; extra == 'real'",
    "franky-panda; platform_machine == 'x86_64' and extra == 'real'",
    "urx>=0.11.0; extra == 'ur'",
    "xarm-python-sdk>=1.15.3; extra == 'xarm'",

    # optional remote
    "zmq>=0.0.0; extra == 'remote'",
    "pyzmq>=26.4.0; extra == 'remote'",
    "psutil>=7.0.0; extra == 'remote'",

    # optional audio
    "openai>=1.64.0; extra == 'audio'",
    "openai-whisper>=20240930; extra == 'audio'",
    "sounddevice>=0.5.2; extra == 'audio'",

    # optional usd

    # usd - only compatible with Python < 3.11
    "usd-core>=23.5.0; python_version < '3.11' and extra == 'usd'",
]

[project.optional-dependencies]
sim = ["mujoco", "robot-descriptions", "dm-control"]
real = ["franky-panda", "pyrealsense2", "pyrealsense2-beta", "pyrobotiqgripper"]
usd = ["usd-core", "mujoco", "robot-descriptions", "dm-control"]
all = ["franky-panda", "pyrealsense2", "pyrealsense2-beta", "pyrobotiqgripper",
       "mujoco", "robot-descriptions", "dm-control", "usd-core",
       "zmq", "pyzmq", "psutil"]
dev = ["sphinx", "toml", "myst-parser", "sphinx-rtd-theme", "sphinxcontrib-video", "black", "ruff"]
ur = ["urx"]
xarm = ["xarm-python-sdk"]
remote = ["zmq", "pyzmq", "psutil"]
audio = ["openai", "openai-whisper", "sounddevice"]



[project.urls]
homepage = "https://robits.ai"
repository = "https://github.com/markusgrotz/robits"
documentation = "https://robits.readthedocs.io/en/latest/"
tracker = "https://github.com/markusgrotz/robits/issues"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
rb = 'robits.cli.main:cli'
panda = 'robits.cli.devices.panda_cli:panda'
gripper = 'robits.cli.devices.gripper_cli:gripper'
camera = 'robits.cli.devices.camera_cli:camera'
